<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_title"
            android:textAppearance="@style/UploadLabels" />

        <EditText
            android:id="@+id/edt_Title"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="text"
            android:textColor="#444444" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_description"
            android:textAppearance="@style/UploadLabels" />

        <EditText
            android:id="@+id/edt_Description"
            android:layout_width="fill_parent"
            android:layout_height="144dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="top"
            android:inputType="text|textMultiLine"
            android:textColor="#444444" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_author"
            android:textAppearance="@style/UploadLabels" />

        <EditText
            android:id="@+id/edt_Author"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textNoSuggestions"
            android:textColor="#444444" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_tags"
            android:textAppearance="@style/UploadLabels" />

        <EditText
            android:id="@+id/edt_Tags"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textNoSuggestions"
            android:textColor="#444444" />

        <Button
            android:id="@+id/btn_Upload"
            style="@style/Button"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/lbl_upload" />
    </LinearLayout>

</ScrollView>